--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ instance/*
 .env
 default.db
 
+### Miscellaneous
+x-*
+
 ### Flask.Python Stack ###
 # Byte-compiled / optimized / DLL files
 __pycache__/
